refactor: add a separate package for search algorithms